--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@ body
   background-color: mediumaquamarine;  
 }
 #app {
-    background-color: aliceblue;
+    background-color: rgb(255, 126, 5);
 }
 
 #myCarousel
 {
-    background-color: red;
+    background-color: rgb(0, 236, 253);
 }
 
 #myCarousel img
